# TIN_NFS

./: CMakeLists.txt
client/: .main.cpp.swp  CMakeLists.txt  Makefile  directoryOperations.cpp  directoryOperations.h  fileOperations.cpp  fileOperations.h  main.cpp
client/authorization/: authorization.cpp  authorization.h
client/data_structures/: client_msg.h  codes.h  server_msg.h
client/file/open/: open.cpp  open.h
client/send_message/: send_message.cpp  send_message.h
client/storage/: DirStorage.cpp  DirStorage.h
data_structures/: client_msg.h  codes.h  server_msg.h
server/: CMakeLists.txt  authSerwer  auth_data.txt  build.sh  clean.sh  main.cpp  operationsSerwer
server/auth_serwer/: .main.cpp.swo  .main.cpp.swp  Makefile  main.cpp
server/data_structures/: client_msg.h  codes.h  server_msg.h
server/operations_serwer/: Makefile  Storage.cpp  Storage.h  main.cpp
server/operations_serwer/request_handlers/: request_handlers.cpp  request_handlers.h
server/operations_serwer/storage/: Storage.cpp  Storage.h
server/test_dir/: empty_text_file.txt  test_file.txt
server/tests/: Makefile  request_handlers_test.cpp
